[iOS] Do not reset the location bar font size on rotation.

Avoids resetting the scale when -resetTransform is called.

Bug: 869379
Cq-Include-Trybots: luci.chromium.try:ios-simulator-full-configs;master.tryserver.chromium.mac:ios-simulator-cronet
Change-Id: Id649065208060cf1c3fbd4394947acad2f67cec3
Reviewed-on: https://chromium-review.googlesource.com/1180896
Reviewed-by: Gauthier Ambard <gambard@chromium.org>
Commit-Queue: Stepan Khapugin <stkhapugin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#584414}
Former-commit-id: 947bd6822b65326572ffb708c6700187799dd10a